# BigData

./: .gitignore  pyproject.toml
Documentazione/: report.aux  report.bbl  report.bib  report.blg  report.out  report.tex  report.toc
Documentazione/pages/: Modeling.tex  businessUnd.tex  dataPrep.tex  dataUnd.tex  deploy.tex  eval.tex
Presentazione/: presentation.aux  presentation.nav  presentation.out  presentation.tex  presentation.toc
prog/: CHEMBERTA.py  CHEMBERTA2.py  EarlyStopping.py  GraphMAE_finetune.py  Transformers.py  analysis.py  bace.py  check_valid_smiles.py  data_distribution_analysis.py  debug_parse.py  experiments.csv  experiments_bace.csv  experiments_bbbp.csv  experiments_cep.csv  experiments_hiv.csv  experiments_lipophilicity.csv  experiments_malaria.csv  load_dataset.py  modelli.txt  myshap.py  plot.py  run_all.ps1  run_graphmae.ps1
prog/emissions/: emissions.csv
prog/emissions_bace/: emissions.csv
prog/emissions_cep/: emissions.csv
prog/emissions_hiv/: emissions.csv
prog/emissions_lipophilicity/: emissions.csv
prog/emissions_malaria/: emissions.csv
