[project]
name = "bigd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "chem>=2.0.0",
    "codecarbon>=3.0.8",
    "datasets>=4.4.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "rdkit>=2025.9.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]

